--- a/src/styles/HeaderDropdown.module.scss
+++ b/src/styles/HeaderDropdown.module.scss
@@ -1,8 +1,7 @@
 .cHeaderDropdown {
   &:global {
     &.c-header-dropdown {
-      width: 100vw;
-      padding: 0 var(--px24);
+      width: 100% !important;
       background-color: transparent;
       border-radius: 0;
       font-size: 1em;
@@ -11,10 +10,13 @@
         position: relative;
         z-index: 1;
         width: 100%;
-        max-width: var(--px1360);
-        margin: 0 auto;
-        padding: 22px 0 0;
+        max-width: 100%;
+        margin: 0;
+        padding: 0 0;
         background-color: var(--grey-600);
+        border-width: 0 var(--px1) var(--px1) var(--px1);
+        border-style: solid;
+        border-color: var(--grey-400);
         border-radius: 0 0 var(--px32) var(--px32);
         overflow: hidden;
       }
@@ -40,27 +42,44 @@
               gap: var(--px20) var(--px24);
 
               a {
-                display: flex;
-                align-items: flex-start;
+                display: grid;
+                align-items: stretch;
+                grid-template-columns: auto 1fr auto;
                 gap: var(--px8);
-                padding: 1em var(--px24);
+                padding: var(--px12);
                 border-radius: var(--px12);
                 box-shadow: inset 0 0 0 1px transparent;
                 transition: background-color 0.3s ease, box-shadow 0.3s ease;
 
                 &:hover,
                 &:focus {
-                  background-color: var(--lava-brand);
-                  box-shadow: inset 0 0 0 1px var(--orange-400);
+                  //background-color: var(--lava-brand);
+                  //box-shadow: inset 0 0 0 1px var(--orange-400);
 
                   .text > small {
                     color: var(--body-color);
                   }
+
+                  .low-icon {
+                    opacity: 1;
+                  }
                 }
 
                 .icon {
-                  width: var(--px20);
-                  height: var(--px20);
+                  display: block;
+
+                  > span {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: var(--px24);
+                    height: var(--px24);
+                  }
+
+                  >i {
+                    width: var(--px20);
+                    height: var(--px20);
+                  }
                 }
 
                 .text {
@@ -84,6 +103,23 @@
                     font-weight: normal;
                     line-height: 1.4em; //19.6px @14px
                     transition: color 0.3s ease;
+                  }
+                }
+
+                .low-icon {
+                  display: flex;
+                  align-items: flex-end;
+                  opacity: 0;
+                  transition: opacity 0.3s ease;
+
+                  i {
+                    width: var(--px24);
+                    height: var(--px24);
+
+                    svg {
+                      max-width: var(--px12);
+                      max-height: var(--px12);
+                    }
                   }
                 }
               }
