LAVAPL-6 Remodify navbar

--- a/src/styles/HeaderDropdown.module.scss
+++ b/src/styles/HeaderDropdown.module.scss
@@ -74,11 +74,11 @@
                     justify-content: center;
                     width: var(--px24);
                     height: var(--px24);
-                  }
 
-                  >i {
-                    width: var(--px20);
-                    height: var(--px20);
+                    i {
+                      width: var(--px20);
+                      height: var(--px20);
+                    }
                   }
                 }
 
