--- a/src/styles/HomeSectionPoolsCard.module.scss
+++ b/src/styles/HomeSectionPoolsCard.module.scss
@@ -70,7 +70,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(160.5px, 1fr));
         align-items: flex-start;
-        gap: 1em;
+        gap: var(--px11) 1em;
         flex-wrap: wrap;
         margin-bottom: auto;
 
@@ -98,7 +98,7 @@
           display: flex;
           flex-direction: column;
           row-gap: var(--px3);
-          margin: 0;
+          margin: var(--px5) 0 0;
           padding: 0;
           list-style: none;
 
