--- a/src/styles/_variables-color.scss
+++ b/src/styles/_variables-color.scss
@@ -16,6 +16,7 @@
   --grey-300: #5E6167;
   --grey-400: #212630;
   --grey-500: #1B212A;
+  --grey-550: #131821;
   --grey-600: #0C121A;
   --grey-700: #05090F;
 
