--- a/src/styles/HeaderDropdown.module.scss
+++ b/src/styles/HeaderDropdown.module.scss
@@ -23,7 +23,7 @@
 
       .c-header-dropdown-grid {
         display: grid;
-        grid-template-columns: 1fr 25em; //400px
+        grid-template-columns: 1fr 447px; //447px
         align-items: stretch;
         width: 100%;
         max-width: 100%;
@@ -36,10 +36,17 @@
           &.menu {
             > div {
               display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
-              grid-template-rows: repeat(3, 1fr);
-              grid-auto-flow: column;
-              gap: var(--px20) var(--px24);
+              grid-template-columns: 1fr;
+              align-items: stretch;
+              gap: 0;
+
+              //@media(min-width: 992px) {
+              //  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+              //}
+
+              @media (min-width: 1200px) {
+                grid-template-columns: 1fr 1fr;
+              }
 
               a {
                 display: grid;
@@ -48,13 +55,11 @@
                 gap: var(--px8);
                 padding: var(--px12);
                 border-radius: var(--px12);
-                box-shadow: inset 0 0 0 1px transparent;
                 transition: background-color 0.3s ease, box-shadow 0.3s ease;
 
                 &:hover,
                 &:focus {
-                  //background-color: var(--lava-brand);
-                  //box-shadow: inset 0 0 0 1px var(--orange-400);
+                  background-color: var(--grey-550);
 
                   .text > small {
                     color: var(--body-color);
@@ -92,16 +97,18 @@
                   }
 
                   >span {
+                    font-size: var(--px20);
                     font-weight: 500;
+                    line-height: 24px;
                   }
 
                   small {
                     width: 100%;
-                    max-width: 22.571em; //316px @14px
+                    max-width: 344px; //316px @14px
                     color: var(--grey-200);
-                    font-size: var(--px14);
+                    font-size: 1em;
                     font-weight: normal;
-                    line-height: 1.4em; //19.6px @14px
+                    line-height: 22.4px;
                     transition: color 0.3s ease;
                   }
                 }
@@ -122,12 +129,19 @@
                     }
                   }
                 }
+
+                &.twitter {
+                  .icon i {
+                    width: 1em;
+                    height: 1em;
+                  }
+                }
               }
             }
           }
 
           &.banner {
-            min-height: 23.05em; //368.8px
+            //min-height: 23.05em; //368.8px
             background: url("../../public/images/lava-orange-bg-x2.webp") no-repeat center center/cover;
 
             .text {
