LAVAPL-33 This page is being integrated onto webflow --- branch is obsolete?

--- a/src/styles/CardData.module.scss
+++ b/src/styles/CardData.module.scss
@@ -1,6 +1,6 @@
-.cHomeSectionDataCardsItem {
+.cCardData {
   &:global {
-    &.c-home-section-data-cards-item {
+    &.c-card-data {
       display: flex;
       flex-direction: column;
       row-gap: 1em;
