--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -80,6 +80,7 @@
   .c-button-text {
     display: block;
     min-width: 0;
+    line-height: normal;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
